--- a/Mid-TermProjectGroup4.ipynb
+++ b/Mid-TermProjectGroup4.ipynb
@@ -1898,8 +1898,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.decomposition import LatentDirichletAllocation\n",
@@ -1910,31 +1912,25 @@
     "x = v.fit_transform(docs_df['text'])\n",
     "df_tfidf = pd.DataFrame(x.todense())\n",
     "\n",
-    "lda_model=LatentDirichletAllocation(n_components=4,learning_method='online',random_state=42,max_iter=100) \n",
+    "lda_model=LatentDirichletAllocation(n_components=1,learning_method='online',random_state=42,max_iter=100) \n",
     "lda_top=lda_model.fit_transform(x.todense())\n",
     "\n",
-    "svd_model = TruncatedSVD(n_components=4,algorithm='randomized',n_iter=10)\n",
+    "svd_model = TruncatedSVD(n_components=1,algorithm='randomized',n_iter=10)\n",
     "svd_top = svd_model.fit_transform(x.todense())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 0:  retarded melittin rectum cockroaches libxmulibxmuso altsexbondagehollysilvagoofyantisemite eastwick rawley aswer ieeeannounc \n",
-      "\n",
-      "Topic 1:  addresser eridanchuvashiasu inguiry tesrt farrs grapenswsesnavymil irwincmptrclonestarorg tuba computracrichardsontx postmasternortoncom \n",
-      "\n",
-      "Topic 2:  maxaxaxaxaxaxaxaxaxaxaxaxaxaxax fb vg di ww mt ik mq ei critu \n",
-      "\n",
-      "Topic 3:  one like people think use anyone good time please new \n",
+      "Topic 0:  one like people think use anyone good time please new \n",
       "\n"
      ]
     }
@@ -1953,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1961,12 +1957,6 @@
      "output_type": "stream",
      "text": [
       "Topic 0:  one people like think use good time anyone god us \n",
-      "\n",
-      "Topic 1:  windows drive card email please mb dos scsi file anyone \n",
-      "\n",
-      "Topic 2:  god jesus bible windows faith christians christian believe christ card \n",
-      "\n",
-      "Topic 3:  key encryption chip clipper government keys file use program windows \n",
       "\n"
      ]
     }
@@ -1980,6 +1970,13 @@
     "        print(t[0],end=\" \")\n",
     "    print(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
