--- a/Mid-TermProjectGroup4.ipynb
+++ b/Mid-TermProjectGroup4.ipynb
@@ -188,6 +188,7 @@
     "stemmer = PorterStemmer()\n",
     "\n",
     "PUNCTUATION = '[^\\w\\s]' #^=not, \\w=alphanumeric character, \\s=space\n",
+    "\n",
     "docs_df['text'] = docs_df['text'].str.lower()\n",
     "docs_df['text'] = docs_df['text'].apply(lambda x: ' '.join([item for item in x.split() if item.strip() not in stop_words]))\n",
     "docs_df['text'] = docs_df['text'].apply(lambda x: lemmatizer.lemmatize(x))\n",
@@ -828,14 +829,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
     "svd_topics_train = svd_model.transform(train)\n",
     "svd_topics_train = svd_topics_train.argmax(axis=1)\n",
     "\n",
-    "# map svd topic to topic label\n",
     "svd_to_topic_lable = {}\n",
     "\n",
     "pair_counter = Counter(list(zip(svd_topics_train, docs_df[\"topic\"].to_numpy()))).most_common()\n",
@@ -852,15 +852,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy score score of lda is:  0.16545872370514406\n",
-      "The f1 score of lda is:  0.16545872370514406\n"
+      "The accuracy score of lsa is:  0.16545872370514406\n",
+      "The f1 score of lsa is:  0.16545872370514406\n"
      ]
     }
    ],
@@ -878,20 +878,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The f1 score of lda is:  0.06779211596252431\n",
-      "The accuracy score score of lda is:  0.06779211596252431\n"
+      "The accuracy score score of lda is:  0.06779211596252431\n",
+      "The f1 score score of lda is:  0.06779211596252431\n"
      ]
     }
    ],
    "source": [
+    "#https://www.machinelearningplus.com/nlp/topic-modeling-visualization-how-to-present-results-lda-models/\n",
     "lda_to_topic_lable = {}\n",
+    "\n",
     "lda_topics_train = lda_model.transform(train)\n",
     "lda_topics_train = lda_topics_train.argmax(axis=1)\n",
     "\n",
